--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "pinia": "^2.1.6",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vuetify": "^3.0.0",
